--- a/Animals.html
+++ b/Animals.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Tamil Learning App</title>
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_KEY_HERE"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
       font-family: 'Times New Roman', serif;
@@ -42,23 +42,23 @@
 </head>
 <body>
   <div class="container" id="app">
-    <img src="assets/images/dashboard/animals.gif" alt="Welcome" />
-    <h1>மதிய வணக்கம்</h1>
+    <img src="assets/images/dashboard/animals.jpg" alt="Welcome" />
+    <h1>வணக்கம்</h1>
     <button onclick="startApp()">உள்நுழை</button>
   </div>
 
   <script>
     const animals = [
-      { name: "நாய்", image: "assets/gifs/Dog.gif" },
-      { name: "பூனை", image: "assets/gifs/Cat.gif" },
-      { name: "யானை", image: "assets/gifs/Elephant.gif" },
-      { name: "குதிரை", image: "assets/gifs/Horse.gif" },
-      { name: "சிங்கம்", image: "assets/gifs/Lion.gif" },
-      { name: "புலி", image: "assets/gifs/Tiger.gif" },
-      { name: "ஆடு", image: "assets/gifs/Goat.gif" },
-      { name: "முயல்", image: "assets/gifs/Rabbit.gif" },
-      { name: "ஒட்டகச்சிவிங்கி", image: "assets/gifs/Giraffe.gif" },
-      { name: "குரங்கு", image: "assets/gifs/Monkey.gif" }
+      { name: "நாய்", image: "assets/images/Animals/Dog.jpg" },
+      { name: "பூனை", image: "assets/images/Animals/cat.jpg" },
+      { name: "யானை", image: "assets/images/Animals/elephant.jpg" },
+      { name: "குதிரை", image: "assets/images/Animals/horse.jpg" },
+      { name: "சிங்கம்", image: "assets/images/Animals/lion.jpg" },
+      { name: "புலி", image: "assets/images/Animals/Tiger.jpg" },
+      { name: "ஆடு", image: "assets/images/Animals/Goat.jpg" },
+      { name: "முயல்", image: "assets/images/Animals/rabbit.jpg" },
+      { name: "ஒட்டகச்சிவிங்கி", image: "assets/images/Animals/girafee.jpg" },
+      { name: "குரங்கு", image: "assets/images/Animals/Monkey.jpg" }
     ];
 
     const maxAttempts = 3;
