--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Tamil Learning App</title>
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
       font-family: 'Times New Roman', serif;
