--- a/Numbers.html
+++ b/Numbers.html
@@ -2,7 +2,7 @@
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
-  <title>Tamil Learning App</title>
+  <title>Tamil Learning App - Numbers</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
@@ -48,24 +48,24 @@
   </div>
 
   <script>
-            const numbers = [
-            { name: "ஒன்று", image: "assets/images/Numbers/Number 1.jpeg" },
-            { name: "இரண்டு", image: "assets/images/Numbers/Number 2.jpeg" },
-            { name: "மூன்று", image: "assets/images/Numbers/Number 3.jpeg" },
-            { name: "நான்கு", image: "assets/images/Numbers/Number 4.jpg" },
-            { name: "ஐந்து", image: "assets/images/Numbers/Number 5.jpeg" },
-            { name: "ஆறு", image: "assets/images/Numbers/Number 6.jpeg" },
-            { name: "ஏழு", image: "assets/images/Numbers/Number 7.jpeg" },
-            { name: "எட்டு", image: "assets/images/Numbers/Number 8.jpeg" },
-            { name: "ஒன்பது", image: "assets/images/Number/Number 9.jpeg" }
-        ];
+    const numbers = [
+      { name: "ஒன்று", image: "assets/images/Numbers/Number 1.jpeg" },
+      { name: "இரண்டு", image: "assets/images/Numbers/Number 2.jpeg" },
+      { name: "மூன்று", image: "assets/images/Numbers/Number 3.jpeg" },
+      { name: "நான்கு", image: "assets/images/Numbers/Number 4.jpg" },
+      { name: "ஐந்து", image: "assets/images/Numbers/Number 5.jpeg" },
+      { name: "ஆறு", image: "assets/images/Numbers/Number 6.jpeg" },
+      { name: "ஏழு", image: "assets/images/Numbers/Number 7.jpeg" },
+      { name: "எட்டு", image: "assets/images/Numbers/Number 8.jpeg" },
+      { name: "ஒன்பது", image: "assets/images/Number/Number 9.jpeg" }
+    ];
 
-    async function speak(text) {
+    const maxAttempts = 3;
+
+    function speak(text) {
       return new Promise(resolve => {
         if (responsiveVoice.voiceSupport()) {
-          responsiveVoice.speak(text, "Tamil Female", {
-            onend: resolve
-          });
+          responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
         } else {
           alert("ResponsiveVoice not supported on this browser.");
           resolve();
@@ -73,8 +73,58 @@
       });
     }
 
+    function listen() {
+      return new Promise((resolve, reject) => {
+        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        recognition.lang = "ta-IN";
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+
+        const timeout = setTimeout(() => {
+          recognition.abort();
+          reject("timeout");
+        }, 10000);
+
+        recognition.onresult = event => {
+          clearTimeout(timeout);
+          const said = event.results[0][0].transcript.trim();
+          resolve(said);
+        };
+
+        recognition.onerror = () => {
+          clearTimeout(timeout);
+          reject("error");
+        };
+
+        recognition.start();
+      });
+    }
+
     async function delay(ms) {
-      return new Promise(r => setTimeout(r, ms));
+      return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function validateWord(word) {
+      let attempts = 0;
+      while (attempts < maxAttempts) {
+        await speak(word);
+        try {
+          const userSaid = await listen();
+          console.log("👂 Heard:", userSaid);
+          if (userSaid === word) {
+            await speak("நன்றாகப் பேசினீர்! அடுத்தது.");
+            return true;
+          } else {
+            attempts++;
+            await speak("தவறு. மீண்டும் முயற்சி செய்யுங்கள்.");
+          }
+        } catch {
+          attempts++;
+          await speak("எதுவும் சொல்லவில்லை. மீண்டும் முயற்சி செய்யுங்கள்.");
+        }
+      }
+      await speak("அடுத்த எண்களுக்கு செல்லலாம்.");
+      return false;
     }
 
     async function startApp() {
@@ -87,8 +137,8 @@
       for (const number of numbers) {
         document.getElementById("NumberImage").src = number.image;
         document.getElementById("NumberName").innerText = number.name;
-        await speak(number.name);
-        await delay(10000); // Wait for 10 seconds per animal
+        await validateWord(number.name);
+        await delay(1000);
       }
 
       await speak("நன்றி! தமிழில் எண்கள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
