--- a/Lunch.html
+++ b/Lunch.html
@@ -2,7 +2,7 @@
 <html lang="ta">
 <head>
   <meta charset="UTF-8" />
-  <title>Tamil Learning App</title>
+  <title>Tamil Learning App - Lunch</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
   <style>
     body {
@@ -48,26 +48,25 @@
   </div>
 
   <script>
-            const lunchs = [
-            { name: "சாம்பார்", image: "assets/images/dashboard/சாம்பார்.jpg" },
-            { name: "ரசம்", image: "assets/images/dashboard/ரசம்.jpg" },
-            { name: "கார குழம்பு", image: "assets/images/dashboard/கார குழம்பு.jpg" },
-            { name: "தயிர்", image: "assets/images/dashboard/தயிர்.jpg" },
-            { name: "பிரியாணி", image: "assets/images/dashboard/பிரியாணி.jpg" },
-            { name: "வடை", image: "assets/images/dashboard/வடை.jpg" },
-            { name: "பாயசம்", image: "assets/images/dashboard/பாயசம்.jpg" },
-            { name: "பொரியல்", image: "assets/images/dashboard/பொரியல்.jpg" },
-            { name: "கூட்டு", image: "assets/images/dashboard/கூட்டு.jpg" },
-            { name: "சாதம்", image: "assets/images/dashboard/சாதம்.jpg" }
+    const lunchs = [
+      { name: "சாதம்", image: "assets/images/dashboard/சாதம்.jpg" },
+      { name: "சாம்பார்", image: "assets/images/dashboard/சாம்பார்.jpg" },
+      { name: "ரசம்", image: "assets/images/dashboard/ரசம்.jpg" },
+      { name: "கார குழம்பு", image: "assets/images/dashboard/கார குழம்பு.jpg" },
+      { name: "தயிர்", image: "assets/images/dashboard/தயிர்.jpg" },
+      { name: "பிரியாணி", image: "assets/images/dashboard/பிரியாணி.jpg" },
+      { name: "வடை", image: "assets/images/dashboard/வடை.jpg" },
+      { name: "பாயசம்", image: "assets/images/dashboard/பாயசம்.jpg" },
+      { name: "பொரியல்", image: "assets/images/dashboard/பொரியல்.jpg" },
+      { name: "கூட்டு", image: "assets/images/dashboard/கூட்டு.jpg" }
+    ];
 
-        ];
+    const maxAttempts = 3;
 
-    async function speak(text) {
+    function speak(text) {
       return new Promise(resolve => {
         if (responsiveVoice.voiceSupport()) {
-          responsiveVoice.speak(text, "Tamil Female", {
-            onend: resolve
-          });
+          responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
         } else {
           alert("ResponsiveVoice not supported on this browser.");
           resolve();
@@ -75,8 +74,58 @@
       });
     }
 
+    function listen() {
+      return new Promise((resolve, reject) => {
+        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+        recognition.lang = "ta-IN";
+        recognition.interimResults = false;
+        recognition.maxAlternatives = 1;
+
+        const timeout = setTimeout(() => {
+          recognition.abort();
+          reject("timeout");
+        }, 20000);
+
+        recognition.onresult = event => {
+          clearTimeout(timeout);
+          const said = event.results[0][0].transcript.trim();
+          resolve(said);
+        };
+
+        recognition.onerror = () => {
+          clearTimeout(timeout);
+          reject("error");
+        };
+
+        recognition.start();
+      });
+    }
+
     async function delay(ms) {
-      return new Promise(r => setTimeout(r, ms));
+      return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function validateWord(word) {
+      let attempts = 0;
+      while (attempts < maxAttempts) {
+        await speak(word);
+        try {
+          const userSaid = await listen();
+          console.log("👂 Heard:", userSaid);
+          if (userSaid === word) {
+            await speak("நன்றாகப் பேசினீர்! அடுத்தது.");
+            return true;
+          } else {
+            attempts++;
+            await speak("தவறு. மீண்டும் முயற்சி செய்யுங்கள்.");
+          }
+        } catch {
+          attempts++;
+          await speak("எதுவும் சொல்லவில்லை. மீண்டும் முயற்சி செய்யுங்கள்.");
+        }
+      }
+      await speak("அடுத்த உணவிற்கு செல்லலாம்.");
+      return false;
     }
 
     async function startApp() {
@@ -89,8 +138,8 @@
       for (const lunch of lunchs) {
         document.getElementById("LunchImage").src = lunch.image;
         document.getElementById("LunchName").innerText = lunch.name;
-        await speak(lunch.name);
-        await delay(10000); // Wait for 10 seconds per animal
+        await validateWord(lunch.name);
+        await delay(1000);
       }
 
       await speak("நன்றி! தமிழில் மதிய உணவுகள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
